--- a/ZbW.Testing.WpfSample.Client/ZbW.Testing.WpfSample.Client.csproj
+++ b/ZbW.Testing.WpfSample.Client/ZbW.Testing.WpfSample.Client.csproj
@@ -12,6 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="NUnit" Version="3.13.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="Prism.Core" Version="8.0.0.1909" />
   </ItemGroup>
 
