--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,19 +2,29 @@ version: 1.0.0.{build}
 image: Visual Studio 2019
 configuration: Debug
 platform: Any CPU
+init:
+- ps: $env:JAVA_HOME = "C:\Program Files\Java\jdk11"
+- ps: $env:JAVA_HOME
 dotnet_csproj:
   patch: true
   file: '**\*.csproj'
   version: '{version}'
   version_prefix: '{version}'
-  package_version: '{version}'  
+  package_version: '{version}'
   assembly_version: '{version}'
   file_version: '{version}'
   informational_version: '{version}'
 before_build:
 - cmd: nuget restore
+- cmd: dotnet tool install -g dotnet-sonarscanner
+- cmd: dotnet sonarscanner begin /o:"shintog" /k:"ZbW.Testing.WpfSample" /v:%APPVEYOR_BUILD_VERSION% /d:sonar.branch.name=%APPVEYOR_REPO_BRANCH% /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="1a4d2f83672b8964464cb3cc31185a66e228b60e" /d:sonar.language="cs" /d:sonar.exclusions="**/bin/**/*,**/obj/**/*" /d:sonar.cs.opencover.reportsPaths="CoverageResults\coverage.opencover.xml"
 build_script:
 - cmd: dotnet build ZbW.Testing.WpfSample.sln
+- cmd: dotnet test ZbW.Testing.WpfSample.Client.IntegrationTests\ZbW.Testing.WpfSample.Client.IntegrationTests.csproj /p:CollectCoverage=true /p:CoverletOutput="../CoverageResults/"
+- cmd: dotnet test ZbW.Testing.WpfSample.Client.UnitTests\ZbW.Testing.WpfSample.Client.UnitTests.csproj /p:CollectCoverage=true /p:CoverletOutput="../CoverageResults/" /p:MergeWith="../CoverageResults/coverage.json"
+- cmd: dotnet test ZbW.Testing.WpfSample.Libs.IpInfoInterface.IntegrationTests\ZbW.Testing.WpfSample.Libs.IpInfoInterface.IntegrationTests.csproj /p:CollectCoverage=true /p:CoverletOutput="../CoverageResults/" /p:MergeWith="../CoverageResults/coverage.json" /p:CoverletOutputFormat=opencover
+after_build:
+- cmd: dotnet sonarscanner end /d:sonar.login="1a4d2f83672b8964464cb3cc31185a66e228b60e"
 artifacts:
-  - path: ZbW.Testing.WpfSample.Client\bin\$(configuration)\netcoreapp3.1
-    name: ZbW.WpfSample
+- path: ZbW.Testing.WpfSample.Client\bin\$(configuration)\netcoreapp3.1
+  name: ZbW.WpfSample
